# logfire-demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: main.yml
otel-collector/: Dockerfile  entrypoint.sh  otel-collector-config.yaml
src/: __main__.py
src/analytics/: agent.py  categorize_slack.py  google_sheets_tool.py  sample_slack_messages.py
src/common/: __init__.py  cities.py  db.py  embeddings.py
src/common/db/: __init__.py  github.py  slack.py
src/spider/: __init__.py  tasks.py
src/tiling/: __init__.py  build_map.py
src/web_ui/: __init__.py  llm.py  main.py  table.py
src/webui/: __init__.py  llm.py  main.py  settings.py  shared.py  slack.py  table.py  web_hooks.py  worker.py
src/webui/templates/slack/: index.html  thread.html
src/worker/: __init__.py  cloc.py  docs_embeddings.py  github_similar_content.py  settings.py
