[project]
name = "logfire-demo"
version = "0.0.0"
description = "Demonstrate what Pydantic Logfire can do."
authors = [
    { name = "Samuel Colvin", email = "s@muelcolvin.com" }
]
requires-python = ">= 3.12"
dependencies = [
    "arq>=0.26.1",
    "asyncpg>=0.29.0",
    "cryptography>=44.0.1",
    "fastapi>=0.115.0",
    "fastui>=0.7.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.5",
    "logfire[asyncpg,fastapi,httpx,system-metrics]>=0.53.0",
    "openai>=1.47.1",
    "pillow>=10.4.0",
    "pydantic>=2.9.2",
    "pydantic-ai>=0.0.23",
    "pydantic-settings>=2.5.2",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.10",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.30.6",
]

[tool.uv]
dev-dependencies = [
    "asyncpg-stubs>=0.29.1",
    "devtools>=0.12.2",
    "ipython>=8.27.0",
    "pyright>=1.1.382",
    "ruff>=0.6.7",
    "watchfiles>=0.24.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.extend-select = ["Q", "RUF100", "C90", "UP", "I"]
lint.flake8-quotes = {inline-quotes = "single", multiline-quotes = "double"}
lint.mccabe = { max-complexity = 14 }
format.quote-style = "single"
